text overflow fix

--- a/styles.css
+++ b/styles.css
@@ -139,7 +139,7 @@ audio {
 
 ul {
   margin: 1em;
-  padding: 1.5em;
+  padding: 1em;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -158,8 +158,14 @@ li {
   flex-grow: 1;
 }
 
+.band, .title {
+  margin: 5px 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .band {
-  font-size: 1vw;
+  font-size: 2vw;
 }
 
 .title {
@@ -174,6 +180,7 @@ li {
 }
 
 img {
+  margin-top: 5px;
   border-radius: 3px;
 }
 
